--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: CustomObserver
 main: com.gmail.uprial.customobserver.CustomObserver
 version: 0.1.1
-api-version: 1.20
+api-version: '1.14'
 commands:
   customobserver:
       description: Reload CustomObserver config
